--- a/src/app/components/view/painel/painel.component.html
+++ b/src/app/components/view/painel/painel.component.html
@@ -1,13 +1,13 @@
 <div id="container">
     <div>
-        <form class="signoForm"> 
+        <form class="signoForm" name="formulario"> 
             <label for="signotype">
                 <p class="pergunta">Qual o seu signo? </p>
             </label>
             
             <select id="signotype" name="signotype" class="formSelect"
             [(ngModel)]="tipoSelecionado" [ngModelOptions]="{standalone: true}" required>
-            <option value=null disabled selected>Selecione..</option>
+            <option selected="selected" value=null disabled selected> Selecione.. </option>
             <option *ngFor="let tipo of tipos" [ngValue]="tipo.id">{{tipo.nome}}</option>
             </select>
 
